Adding function for display user input
Add function to store what user input and return it than display to html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   <body>
     <h1>Rock Paper Scissors Game</h1>
 
-    <p id="comp_c">computer choice is </p>
+    <button onclick="getHumanChoice()">PLAY !!</button>
+    
+    <p id="comp_c"></p>
+    
+    <p id="player_input_txt"></p>
+
     <script src="java_script.js"></script>
   </body>
 </html>
