Adding function for play 5 round
Adding function to repeat 1 game for 5 times
and print in console the result

--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
   <body>
     <h1>Rock Paper Scissors Game</h1>
 
-    <button onclick="getHumanChoice()">PLAY !!</button>
-    
-    <p id="comp_c"></p>
-    
-    <p id="player_input_txt"></p>
+    <button onclick="playGame()">PLAY !!</button>
 
     <script src="java_script.js"></script>
   </body>
